# pharma-voice-orders

./: .dockerignore  ASSIGNMENT.md  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  PHARMA_VOICE_FLOW.md  PROJECT_REPORT.md  README.md  app.py  debug_extraction.py  main.py  order_processing_ui.py  pyproject.toml  requirements.txt  ruff.toml
assets/: styles.css
audioData/: R_001.m4a  R_002.m4a  R_003.m4a  R_004.m4a  R_005.m4a  R_006.m4a  R_007.m4a  R_008.m4a  R_009.m4a  R_010.m4a  R_011.m4a  R_012.m4a  R_013.m4a  R_014.m4a  R_015.m4a  R_016.m4a  R_017.m4a  R_018.m4a  R_019.m4a  R_020.m4a
core/: asr_engine.py  entity_extractor.py  excel_exporter.py  preprocessor.py  runtime_resources.py  transcript_verifier.py
data/: Medicine_Names_Packges.csv  aliases.json  manufacturers.csv  medicines.csv
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  HUGGINGFACE_SPACE_SETUP.md
docs/architecture/: 01_AUDIO_PIPELINE.md  02_ENTITY_EXTRACTION.md  03_EVALUATION.md  04_COMPONENTS.md
evaluation/: entity_evaluator.py  evaluation_ui.py  generate_ground_truth.py  ground_truth.csv  metrics.py  test_cases.json
evaluation/demo/: demo_extracted_results.json  demo_ground_truth.csv  demo_metrics.json
notebooks/: colab_gpu_launcher.ipynb
prompts/: asr_prompt_guide.md
scripts/: check_syntax.py
simulation/: manufacturer_db.py  order_queue.py
