[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharma-voice-orders"
version = "1.0.0"
description = "Voice-to-Order: Streamlit app for pharmaceutical distributors using Speech-to-Text (Whisper) and entity extraction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "regex>=2026.1.15",
    "soundfile>=0.13.1",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "webrtcvad>=2.0.10",
    "pydub>=0.25.1",
]

[project.scripts]
start = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "simulation", "evaluation"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "65dc261512cbdb1ee72b88ae5b222f2605aad8e5" }

